fix input sanitization bug when input is tm() obj

--- a/example_proj/text_two.text.yaml
+++ b/example_proj/text_two.text.yaml
@@ -1,3 +1,9 @@
+james:
+  en: James
+
+bond:
+  en: Bond
+
 txt_with_args:
   en: Hello %(firstname)s %(lastname)s
   fr: Bonjour %(firstname)s %(lastname)s
